--- a/src/DoIt.DbMigrator/DoIt.DbMigrator.csproj
+++ b/src/DoIt.DbMigrator/DoIt.DbMigrator.csproj
@@ -9,4 +9,8 @@
       <Folder Include="Sql" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="dbup-postgresql" Version="4.5.0" />
+    </ItemGroup>
+
 </Project>
