--- a/src/DoIt.Application/DoIt.Application.csproj
+++ b/src/DoIt.Application/DoIt.Application.csproj
@@ -10,6 +10,8 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+      <PackageReference Include="DotNetCore.CAP" Version="5.1.0" />
+      <PackageReference Include="DotNetCore.CAP.SqlServer" Version="5.1.0" />
       <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     </ItemGroup>
 
