new clean migrations

--- a/src/DoIt.Infrastructure/DoIt.Infrastructure.csproj
+++ b/src/DoIt.Infrastructure/DoIt.Infrastructure.csproj
@@ -16,4 +16,7 @@
     <ItemGroup>
       <ProjectReference Include="..\DoIt.Application\DoIt.Application.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Data\Migrations" />
+    </ItemGroup>
 </Project>
